ajout anchor commande

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>   
 
     <section class="banner" id="banner">
-      <a class="commandez" href="/pagecommande/commande2.html">Commandez</a>
+      <a class="commandez" href="./pagecommande/commande2.html">Commandez</a>
         <div>
              <h2> Яun, </h2>
               <h3 class="subtitle"> Patisserie - Boulangerie </h3>   
