--- a/product/product.html
+++ b/product/product.html
@@ -38,7 +38,7 @@
                 <div class="hero-wrapper home">
                     <div class="background-skewed">
                         <h1 class="title-product">Nos Produits</h2>
-                            <a class="commandez" href="/pagecommande/commande2.html">Commandez</a>
+                            <a class="commandez" href="../pagecommande/commande2.html">Commandez</a>
                         <div class="vitrine-container">
                             <div class="container-img">
                                 <div class="patisserie">
