--- a/crew/crew.html
+++ b/crew/crew.html
@@ -17,7 +17,7 @@
 		<img src="images/logo.png" class="logo">
 		<div class="toggle" onclick="toggleMenu();"></div>
 		<ul class="menu">
-			<li> <a href="/index.html" class="" onclick="toggleMenu();">Home</a></li>
+			<li> <a href="../index.html" class="" onclick="toggleMenu();">Home</a></li>
 			<li> <a href="../product/product.html" onclick="toggleMenu();"> Nos produits </a> </li>
 			<li> <a href="./crew.html" class="active" onclick="toggleMenu();"> Crew</a></li>
 			<li> <a href="../contact/contact.html" onclick="toggleMenu();"> Contact</a></li>
