--- a/contact/contact.html
+++ b/contact/contact.html
@@ -1,68 +1,101 @@
 <!DOCTYPE html>
- <html lang="fr">
- <head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
 
-     <link href="contact.css" rel="stylesheet">
-     <title> Яun Boulangerie Pâtisserie </title>
- </head>
- <body>
-     <div class="infoBloc">
-         <div class="defil"> Adressse , numéro de télèphone, ouvert 7/7</div> 
-     </div>
+    <link href="contact.css" rel="stylesheet" />
+    <title>Яun Boulangerie Pâtisserie</title>
+  </head>
+  <body>
+    <div class="infoBloc">
+      <div class="defil">Adressse , numéro de télèphone, ouvert 7/7</div>
+    </div>
 
-     <header id="head">
-		<img src="images/logo.png" class="logo">
-		<div class="toggle" onclick="toggleMenu();"></div>
-		<ul class="menu">
-			<li class="anav"> <a href="../index.html"  onclick="toggleMenu();">Home</a></li>
-			<li class="anav"> <a href="../product/product.html"  onclick="toggleMenu();"> Nos produits </a> </li>
-			<li class="anav"> <a href="../crew/crew.html" onclick="toggleMenu();"> Crew</a></li>
-			<li class="anav"> <a href="./contact.html" class="active" onclick="toggleMenu();"> Contact</a></li>
-		</ul>
+    <header id="head">
+      <img src="images/logo.png" class="logo" />
+      <div class="toggle" onclick="toggleMenu();"></div>
+      <ul class="menu">
+        <li class="anav">
+          <a href="../index.html" onclick="toggleMenu();">Home</a>
+        </li>
+        <li class="anav">
+          <a href="../product/product.html" onclick="toggleMenu();">
+            Nos produits
+          </a>
+        </li>
+        <li class="anav">
+          <a href="../crew/crew.html" onclick="toggleMenu();"> Crew</a>
+        </li>
+        <li class="anav">
+          <a href="./contact.html" class="active" onclick="toggleMenu();">
+            Contact</a
+          >
+        </li>
+      </ul>
     </header>
-     <main>
+    <main>
+      <section class="containerContact"></section>
+      <form id="contactForm" action="" method="post">
+        <div id="area">
+          <label for="name"></label>
+          <input type="text" id="name" name="user_name" placeholder="Nom" />
+        </div>
+        <div id="area">
+          <label for="mail"></label>
+          <input type="email" id="mail" name="user_mail" placeholder="Mail" />
+        </div>
+        <div id="area">
+          <label for="msg"></label>
+          <textarea
+            id="msg"
+            type="text"
+            name="user_message"
+            placeholder="De quoi avez vous besoin ?"
+          ></textarea>
+        </div>
+        <div id="area">
+          <label for="submit"></label>
+          <button id="submit" type="button">Envoyer</button>
+        </div>
+      </form>
+    </main>
 
-<section class="containerContact"></section>
-<form id="contactForm" action="" method="post">
-    <div id="area">
-        <label for="name" ></label>
-        <input type="text" id="name" name="user_name" placeholder="Nom">
-    </div>
-    <div id="area">
-        <label for="mail"></label>
-        <input type="email" id="mail" name="user_mail" placeholder="Mail">
-    </div>
-    <div id="area">
-        <label for="msg"></label>
-        <textarea id="msg" type="text" name="user_message" Placeholder="De quoi avez vous besoin ?"></textarea>
-    </div>
-    <div id="area">
-    <label for="submit"></label>
-    <button id="submit"type="button">Envoyer</button>
-    </div>
-</form>
+    <a
+      href="https://www.ubereats.com/fr/nantes/food-delivery/run-patisserie-boulangerie/dsfD9E7kQvmog7ioV_OLkA"
+      target="_blank"
+      ><img src="images/uber.png" class="badge" id="badge"
+    /></a>
 
+    <section class="footer">
+      <div class="acceuilBox_box1IconNetwork">
+        <a
+          href="https://www.linkedin.com/home/?originalSubdomain=fr"
+          target="_blank"
+          ><i class="fab fa-linkedin-in fa-2x"></i
+        ></a>
+        <a
+          href="https://www.facebook.com/pages/category/Just-For-Fun/Run-Boulangerie-P%C3%A2tisserie-110002427178075/"
+          target="_blank"
+          ><i class="fab fa-facebook fa-2x"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/run_patisserieboulangerie/?hl=fr"
+          target="_blank"
+          ><i class="fab fa-instagram-square fa-2x"></i
+        ></a>
+      </div>
 
-     </main>
-     
-     <a href="https://www.ubereats.com/fr/nantes/food-delivery/run-patisserie-boulangerie/dsfD9E7kQvmog7ioV_OLkA" target="_blank"><img src="images/uber.png" class="badge" id="badge"></a>
-    
-     <section class="footer">
-   
-       <div class="acceuilBox_box1IconNetwork">
-         <a href="https://www.linkedin.com/home/?originalSubdomain=fr" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
-         <a href="https://www.facebook.com/pages/category/Just-For-Fun/Run-Boulangerie-P%C3%A2tisserie-110002427178075/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-         <a href="https://www.instagram.com/run_patisserieboulangerie/?hl=fr" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a>
-     </div>
-   
-       <img src="images/logo.png" class="logo">
-       <a class="btnfooter"></a>
-
-     </section>
+      <img src="images/logo.png" class="logo" />
+      <a class="btnfooter"></a>
+    </section>
     <script src="./contact.js"></script>
- </body>
- </html>
+  </body>
+</html>
